package br.unitins.guitarra.model.perfil;

import java.time.LocalDate;

import br.unitins.guitarra.model.BaseEntity;
import jakarta.persistence.Entity;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.OneToOne;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@Entity
public class Funcionario extends BaseEntity {
    @OneToOne
    @JoinColumn(name = "id_pessoa", unique = true)
    private Pessoa    pessoa;
    private String    cargo;
    private Double    salario;
    private LocalDate dataAdmissao;
}
